<resources>
    <string name="app_name">ChallengePractica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">Buy app</string>
    <string name="save">Guardar</string>
    <string name="buy">Comprar ahora</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="continuar">Continuar</string>
</resources>